--- a/config
+++ b/config
@@ -1,7 +1,9 @@
 ngx_addon_name=ngx_http_drizzle_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_drizzle_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/mod_drizzle.c"
-CFLAGS="$CFLAGS -I$ngx_addon_dir/src/"
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_drizzle_module.c"
+NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h $ngx_addon_dir/src/ngx_http_drizzle_module.h"
 #CFLAGS="$CFLAGS -I$ngx_addon_dir/src/"
+#CFLAGS="$CFLAGS -I$ngx_addon_dir/src/"
+# XXX fix -ldrizzle
 CORE_LIBS="$CORE_LIBS -ldrizzle"
 
