--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 ngx_addon_name=ngx_http_drizzle_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_drizzle_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_drizzle_module.c"
-NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h $ngx_addon_dir/src/ngx_http_drizzle_module.h"
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_drizzle_module.c $ngx_addon_dir/src/ngx_http_drizzle_handler.c $ngx_addon_dir/src/ngx_http_drizzle_processor.c $ngx_addon_dir/src/ngx_http_upstream_drizzle.c"
+NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h $ngx_addon_dir/src/ngx_http_drizzle_module.h $ngx_addon_dir/src/ngx_http_drizzle_handler.h $ngx_addon_dir/src/ngx_http_drizzle_processor.h $ngx_addon_dir/src/ngx_http_upstream_drizzle.h"
 #CFLAGS="$CFLAGS -I$ngx_addon_dir/src/"
 #CFLAGS="$CFLAGS -I$ngx_addon_dir/src/"
 # XXX fix -ldrizzle
