--- a/config
+++ b/config
@@ -1,14 +1,11 @@
-ngx_feature="libdrizzle library"
-ngx_feature_libs="-ldrizzle"
 ngx_feature_name=
 ngx_feature_run=no
 ngx_feature_incs="#include <libdrizzle/drizzle_client.h>"
-ngx_feature_path=
 ngx_feature_test="drizzle_version();"
 
-if [ -n "$LIBDRIZZLE_LIB" ]; then
+if [ -n "$LIBDRIZZLE_INC" -o -n "$LIBDRIZZLE_LIB" ]; then
     # explicit set libdrizzle lib path
-    ngx_feature="libdrizzle library in $LIBDRIZZLE_LIB (specified by the LIBDRIZZLE_LIB env)"
+    ngx_feature="libdrizzle library in directories specified by LIBDRIZZLE_INC ($LIBDRIZZLE_INC) and LIBDRIZZLE_LIB ($LIBDRIZZLE_LIB)"
     ngx_feature_path="$LIBDRIZZLE_INC"
     if [ $NGX_RPATH = YES ]; then
         ngx_feature_libs="-R$LIBDRIZZLE_LIB -L$LIBDRIZZLE_LIB -ldrizzle"
@@ -16,48 +13,48 @@ if [ -n "$LIBDRIZZLE_LIB" ]; then
         ngx_feature_libs="-L$LIBDRIZZLE_LIB -ldrizzle"
     fi
     . auto/feature
-fi
-
-if [ $ngx_found = no ]; then
+else
+    # auto-discovery
     ngx_feature="libdrizzle library"
+    ngx_feature_path=
     ngx_feature_libs="-ldrizzle"
     . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # FreeBSD, OpenBSD
-    ngx_feature="libdrizzle library in /usr/local/"
-    ngx_feature_path="/usr/local/include"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -ldrizzle"
-    else
-        ngx_feature_libs="-L/usr/local/lib -ldrizzle"
+    if [ $ngx_found = no ]; then
+        # FreeBSD, OpenBSD
+        ngx_feature="libdrizzle library in /usr/local/"
+        ngx_feature_path="/usr/local/include"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -ldrizzle"
+        else
+            ngx_feature_libs="-L/usr/local/lib -ldrizzle"
+        fi
+        . auto/feature
     fi
-    . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # NetBSD
-    ngx_feature="libdrizzle library in /usr/pkg/"
-    ngx_feature_path="/usr/pkg/include/"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/usr/pkg/lib -L/usr/pkg/lib -ldrizzle"
-    else
-        ngx_feature_libs="-L/usr/pkg/lib -ldrizzle"
+    if [ $ngx_found = no ]; then
+        # NetBSD
+        ngx_feature="libdrizzle library in /usr/pkg/"
+        ngx_feature_path="/usr/pkg/include/"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/usr/pkg/lib -L/usr/pkg/lib -ldrizzle"
+        else
+            ngx_feature_libs="-L/usr/pkg/lib -ldrizzle"
+        fi
+        . auto/feature
     fi
-    . auto/feature
-fi
 
-if [ $ngx_found = no ]; then
-    # MacPorts
-    ngx_feature="libdrizzle library in /opt/local/"
-    ngx_feature_path="/opt/local/include"
-    if [ $NGX_RPATH = YES ]; then
-        ngx_feature_libs="-R/opt/local/lib -L/opt/local/lib -ldrizzle"
-    else
-        ngx_feature_libs="-L/opt/local/lib -ldrizzle"
+    if [ $ngx_found = no ]; then
+        # MacPorts
+        ngx_feature="libdrizzle library in /opt/local/"
+        ngx_feature_path="/opt/local/include"
+        if [ $NGX_RPATH = YES ]; then
+            ngx_feature_libs="-R/opt/local/lib -L/opt/local/lib -ldrizzle"
+        else
+            ngx_feature_libs="-L/opt/local/lib -ldrizzle"
+        fi
+        . auto/feature
     fi
-    . auto/feature
 fi
 
 if [ $ngx_found = yes ]; then
@@ -74,3 +71,5 @@ ngx_addon_name=ngx_http_drizzle_module
 HTTP_MODULES="$HTTP_MODULES ngx_http_drizzle_module"
 NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/src/ngx_http_drizzle_module.c $ngx_addon_dir/src/ngx_http_drizzle_handler.c $ngx_addon_dir/src/ngx_http_drizzle_processor.c $ngx_addon_dir/src/ngx_http_upstream_drizzle.c $ngx_addon_dir/src/ngx_http_drizzle_util.c $ngx_addon_dir/src/ngx_http_drizzle_output.c $ngx_addon_dir/src/ngx_http_drizzle_keepalive.c $ngx_addon_dir/src/ngx_http_drizzle_quoting.c $ngx_addon_dir/src/ngx_http_drizzle_checker.c"
 NGX_ADDON_DEPS="$NGX_ADDON_DEPS $ngx_addon_dir/src/ddebug.h $ngx_addon_dir/src/ngx_http_drizzle_module.h $ngx_addon_dir/src/ngx_http_drizzle_handler.h $ngx_addon_dir/src/ngx_http_drizzle_processor.h $ngx_addon_dir/src/ngx_http_upstream_drizzle.h $ngx_addon_dir/src/ngx_http_drizzle_util.h $ngx_addon_dir/src/ngx_http_drizzle_output.h $ngx_addon_dir/src/resty_dbd_stream.h $ngx_addon_dir/src/ngx_http_drizzle_keepalive.h $ngx_addon_dir/src/ngx_http_drizzle_quoting.h $ngx_addon_dir/src/ngx_http_drizzle_checker.h"
+
+have=NGX_DRIZZLE_MODULE . auto/have
