--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ print.txt
 .rsync
 *.tar.gz
 dist
-build[78]
+build[789]
 build
 tags
 update-readme
@@ -50,3 +50,4 @@ src/checker.h
 src/checker.c
 src/quoting.h
 src/quoting.c
+all.sh
