--- a/config
+++ b/config
@@ -23,7 +23,7 @@ else
     if [ $ngx_found = no ]; then
         # FreeBSD, OpenBSD
         ngx_feature="libdrizzle library in /usr/local/"
-        ngx_feature_path="/usr/local/include"
+        ngx_feature_path="/usr/local/include/libdrizzle-1.0"
         if [ $NGX_RPATH = YES ]; then
             ngx_feature_libs="-R/usr/local/lib -L/usr/local/lib -ldrizzle"
         else
@@ -35,7 +35,7 @@ else
     if [ $ngx_found = no ]; then
         # NetBSD
         ngx_feature="libdrizzle library in /usr/pkg/"
-        ngx_feature_path="/usr/pkg/include/"
+        ngx_feature_path="/usr/pkg/include/libdrizzle-1.0"
         if [ $NGX_RPATH = YES ]; then
             ngx_feature_libs="-R/usr/pkg/lib -L/usr/pkg/lib -ldrizzle"
         else
@@ -47,7 +47,7 @@ else
     if [ $ngx_found = no ]; then
         # MacPorts
         ngx_feature="libdrizzle library in /opt/local/"
-        ngx_feature_path="/opt/local/include"
+        ngx_feature_path="/opt/local/include/libdrizzle-1.0"
         if [ $NGX_RPATH = YES ]; then
             ngx_feature_libs="-R/opt/local/lib -L/opt/local/lib -ldrizzle"
         else
